--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ title: Vinay Kotwani
 #logo: /assets/img/headshot.png
 #description: text below image
 #show_downloads: true
-theme: jekyll-theme-midnight
+theme: jekyll-theme-slate
